ligolang/src/test/contracts/negative/vars_consts/assign_const_param.jsligo
let x = (a: int): int => {
  const age: int = 25;
  {
     const age: int = 3; // does not give an error
     age = 42; // does give an error
     return age;
  }
};
